deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: levelmix
  labels:
    name: levelmix
    environment: production
